Atualização de dependecias e do header de licença