@@ -21,7 +21,6 @@ package com.kuuhaku.controller.postgresql;
 import javax.persistence.EntityManager;
 import javax.persistence.Query;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RankDAO {
 
@@ -67,7 +66,7 @@ public class RankDAO {
 		try {
 			return ((List<Object[]>) q.getResultList())
 					.stream().map(o -> (String) o[0])
-					.collect(Collectors.toList());
+					.toList();
 		} finally {
 			em.close();
 		}
@@ -94,7 +93,7 @@ public class RankDAO {
 		try {
 			return ((List<Object[]>) q.getResultList())
 					.stream().map(o -> (String) o[0])
-					.collect(Collectors.toList());
+					.toList();
 		} finally {
 			em.close();
 		}
@@ -126,7 +125,7 @@ public class RankDAO {
 		try {
 			return ((List<Object[]>) q.getResultList())
 					.stream().map(o -> (String) o[0])
-					.collect(Collectors.toList());
+					.toList();
 		} finally {
 			em.close();
 		}
@@ -155,7 +154,7 @@ public class RankDAO {
 		try {
 			return ((List<Object[]>) q.getResultList())
 					.stream().map(o -> (String) o[0])
-					.collect(Collectors.toList());
+					.toList();
 		} finally {
 			em.close();
 		}
